# numpyro-doing-bayesian

./: .gitignore  LICENSE  README.md  dodo.py  environment.yml  pyproject.toml
.github/workflows/: build_notebooks.sh  publish-notebooks.yml
docs/: chapter_09.html  chapter_10.html  chapter_12.html  chapter_16.html  chapter_17.html  chapter_18.html  chapter_19.html  chapter_20.html  chapter_21.html  chapter_21_exercise_21_3.html  chapter_22.html  chapter_23.html  chapter_23_exercise_23_2.html  chapter_24.html
examples/: chapter_16.py  chapter_17.py  chapter_18.py  chapter_19.py  chapter_20.py  chapter_21.py
examples/ordinal/: synthesis.py
html_template/: index.html.j2
notebooks/: chapter_09.ipynb  chapter_09.py  chapter_10.ipynb  chapter_10.py  chapter_12.ipynb  chapter_12.py  chapter_16.ipynb  chapter_16.py  chapter_17.ipynb  chapter_17.py  chapter_18.ipynb  chapter_18.py  chapter_19.ipynb  chapter_19.py  chapter_20.ipynb  chapter_20.py  chapter_21.ipynb  chapter_21.py  chapter_21_exercise_21_3.ipynb  chapter_21_exercise_21_3.py  chapter_22.ipynb  chapter_22.py  chapter_23.ipynb  chapter_23.py  chapter_23_exercise_23_2.ipynb  chapter_23_exercise_23_2.py  chapter_24.ipynb  chapter_24.py
notebooks/ordinal/: synthesis.py
numpyro_glm/: __init__.py  metric.py  ordinal.py
numpyro_glm/count/: models.py
numpyro_glm/logistic/: models.py
numpyro_glm/metric/: models.py  plots.py
numpyro_glm/ordinal/: models.py  (+1 more)
outputs/: chapter_16.ipynb  chapter_17.ipynb  chapter_18.ipynb  chapter_19.ipynb  chapter_20.ipynb  chapter_21.ipynb  chapter_22.ipynb  chapter_23.ipynb
(+4 files in other folders)
