[tool.poetry]
name = "numpyo_glm"
version = "0.1.0"
description = ""
authors = ["beekill <nguyenmbquan95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
numpyro = "^0.9.2"
matplotlib = "^3.5.2"
pandas = "^1.3"
numpy = "^1.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
