[tool.poetry]
name = "numpyo_glm"
version = "0.1.0"
description = ""
authors = ["beekill <nguyenmbquan95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
numpyro = "^0.9.2"
matplotlib = "^3.5.2"
pandas = "^1.3"
numpy = "^1.21"
graphviz = "^0.20"
arviz = "^0.12.1"
scipy = "^1.6"
funsor = "^0.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
jupyterlab = "^3.4.2"
jupytext = "^1.13.8"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
